Fixed table not showing sort icons

--- a/UI/Web/src/theme/components/_table.scss
+++ b/UI/Web/src/theme/components/_table.scss
@@ -10,6 +10,7 @@ th[sortable].asc:after {
     width: 22px;
     height: 22px;
     float: right;
+    filter: invert(1);
 }
 
 th[sortable].desc:after {
@@ -21,6 +22,7 @@ th[sortable].desc:after {
   height: 22px;
   float: right;
   transform: rotate(180deg);
+  filter: invert(1);
 }
 
 .table {
